--- a/src/components/ThemeProvider.astro
+++ b/src/components/ThemeProvider.astro
@@ -4,7 +4,7 @@
 
 	function getUserPref() {
 		const storedTheme = typeof localStorage !== "undefined" && localStorage.getItem("theme");
-		return storedTheme || (lightModePref.matches ? "light" : "dark");
+		return storedTheme || "light";
 	}
 
 	function setTheme(newTheme) {
