--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -9,7 +9,7 @@ const year = new Date().getFullYear();
 >
 	<div class="me-0 sm:me-4">
 		&copy; {siteConfig.author}
-		{year}.<span class="inline-block">&nbsp;🚀&nbsp;{siteConfig.title}</span>
+		{year}.
 	</div>
 	<nav
 		aria-labelledby="footer_links"
