update icon for mobile

--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -45,8 +45,8 @@ const socialLinks: {
 ];
 ---
 
-<div class="flex flex-wrap items-center gap-x-4">
-	<ul class="flex flex-1 items-center gap-x-4 sm:flex-initial">
+<div class="flex flex-wrap items-center gap-4">
+	<ul class="flex flex-wrap items-center gap-4">
 		{
 			socialLinks.map(({ friendlyName, isWebmention, link, name }) => (
 				<li class="flex">
