--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -8,7 +8,6 @@ import { Icon } from "astro-icon/components";
 */
 const socialLinks: {
 	friendlyName: string;
-	isWebmention?: boolean;
 	link: string;
 	name: string;
 }[] = [
@@ -48,12 +47,12 @@ const socialLinks: {
 <div class="flex flex-wrap items-center gap-4">
 	<ul class="flex flex-wrap items-center gap-4">
 		{
-			socialLinks.map(({ friendlyName, isWebmention, link, name }) => (
+			socialLinks.map(({ friendlyName, link, name }) => (
 				<li class="flex">
 					<a
 						class="hover:text-link inline-flex items-center gap-x-2"
 						href={link}
-						rel={`noreferrer ${isWebmention ? "me authn" : ""}`}
+						rel="noreferrer"
 						target="_blank"
 					>
 						<Icon aria-hidden="true" class="h-6 w-6" focusable="false" name={name} />
