--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import profilePic from "@/assets/profile-pic.jpg";
 				<br />
 				I am currently a postdoctoral researcher at <a
 					href="https://www.itmp.fraunhofer.de/en/institute/locations.html#cop_21365571754_copy_c_637851265"
-					class="cactus-link"
+					class="link"
 					target="_blank">Fraunhofer ITMP-IIP</a
 				> where I design proteins as diagnostics or therapeutics targeting infectious diseases.<br
 				/>
