--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -60,9 +60,8 @@
 
 @layer components {
 	@import "./components/admonition.css";
-	@import "./components/github-card.css";
 
-	.cactus-link {
+	.link {
 		@apply hover:decoration-link underline underline-offset-2 hover:decoration-2;
 	}
 
