add links to papers

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,8 +39,12 @@ import profilePic from "@/assets/profile-pic.jpg";
 			<ul class="list-disc space-y-6 ps-6">
 				<li>
 					<p class="font-bold">
-						HyperMPNN–A general strategy to design thermostable proteins learned from
-						hyperthermophiles.
+					<a
+					href="https://www.biorxiv.org/content/10.1101/2024.11.26.625397v1"
+					class="link"
+					target="_blank">HyperMPNN–A general strategy to design thermostable proteins learned from
+						hyperthermophiles.</a
+					>
 					</p>
 					<p>
 						Ertelt, M., Schlegel, P., Beining, M., Kaysser, L., Meiler, J. and Schoeder, C.T., 2024.
@@ -49,8 +53,12 @@ import profilePic from "@/assets/profile-pic.jpg";
 				</li>
 				<li>
 					<p class="font-bold">
-						Self-supervised machine learning methods for protein design improve sampling but not the
-						identification of high-fitness variants.
+					<a
+					href="https://www.science.org/doi/full/10.1126/sciadv.adr7338"
+					class="link"
+					target="_blank">Self-supervised machine learning methods for protein design improve sampling but not the
+						identification of high-fitness variants.</a
+					>
 					</p>
 					<p>
 						Ertelt, M., Moretti, R., Meiler, J. and Schoeder, C.T., 2025. Science Advances, 11(7),
@@ -59,8 +67,12 @@ import profilePic from "@/assets/profile-pic.jpg";
 				</li>
 				<li>
 					<p class="font-bold">
-						Combining Rosetta sequence design with protein language model predictions using
-						evolutionary scale modeling (ESM) as restraint.
+					<a
+					href="https://pubs.acs.org/doi/full/10.1021/acssynbio.3c00753"
+					class="link"
+					target="_blank">Combining Rosetta sequence design with protein language model predictions using
+						evolutionary scale modeling (ESM) as restraint.</a
+					>
 					</p>
 					<p>
 						Ertelt, M., Meiler, J. and Schoeder, C.T., 2024. ACS synthetic biology, 13(4),
@@ -69,8 +81,12 @@ import profilePic from "@/assets/profile-pic.jpg";
 				</li>
 				<li>
 					<p class="font-bold">
-						Combining machine learning with structure-based protein design to predict and engineer
-						post-translational modifications of proteins.
+					<a
+					href="https://www.biorxiv.org/content/10.1101/2024.11.26.625397v1"
+					class="link"
+					target="_blank">Combining machine learning with structure-based protein design to predict and engineer
+						post-translational modifications of proteins.</a
+					>
 					</p>
 					<p>
 						Ertelt, M., Mulligan, V.K., Maguire, J.B., Lyskov, S., Moretti, R., Schiffner, T.,
@@ -79,7 +95,11 @@ import profilePic from "@/assets/profile-pic.jpg";
 				</li>
 				<li>
 					<p class="font-bold">
-						Rosetta design with co-evolutionary information retains protein function.
+					<a
+					href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1008568"
+					class="link"
+					target="_blank">Rosetta design with co-evolutionary information retains protein function.</a
+					>
 					</p>
 					<p>
 						Schmitz, S., Ertelt, M., Merkl, R. and Meiler, J., 2021. PLoS Computational Biology,
@@ -91,8 +111,12 @@ import profilePic from "@/assets/profile-pic.jpg";
 			<ul class="list-disc space-y-6 ps-6">
 				<li>
 					<p class="font-bold">
-						Adeno‐associated virus serotype 2 capsid variants for improved liver‐directed gene
-						therapy.
+					<a
+					href="https://journals.lww.com/hep/fulltext/2023/03000/Adeno_associated_virus_serotype_2_capsid_variants.11.aspx?context=LatestArticles"
+					class="link"
+					target="_blank">Adeno‐associated virus serotype 2 capsid variants for improved liver‐directed gene
+						therapy.</a
+					>
 					</p>
 					<p>
 						Meumann, N., Cabanes‐Creus, M., Ertelt, M., Navarro, R.G., Lucifora, J., Yuan, Q.,
@@ -102,7 +126,11 @@ import profilePic from "@/assets/profile-pic.jpg";
 				</li>
 				<li>
 					<p class="font-bold">
-						Modifying immune responses to adeno-associated virus vectors by capsid engineering.
+					<a
+					href="https://www.cell.com/molecular-therapy-family/methods/fulltext/S2329-0501(23)00129-8"
+					class="link"
+					target="_blank">Modifying immune responses to adeno-associated virus vectors by capsid engineering.</a
+					>
 					</p>
 					<p>
 						Bentler, M., Hardet, R., Ertelt, M., Rudolf, D., Kaniowska, D., Schneider, A., Vondran,
@@ -115,8 +143,12 @@ import profilePic from "@/assets/profile-pic.jpg";
 			<ul class="list-disc space-y-6 ps-6">
 				<li>
 					<p class="font-bold">
-						Integrating binding affinity and tonic signaling enables a rational CAR design for
-						augmented T cell function.
+					<a
+					href="https://jitc.bmj.com/content/12/12/e010208"
+					class="link"
+					target="_blank">Integrating binding affinity and tonic signaling enables a rational CAR design for
+						augmented T cell function.</a
+					>
 					</p>
 					<p>
 						Barden, M., Elsenbroich, P.R., Haas, V., Ertelt, M., Pervan, P., Velas, L., Gergely, B.,
